[gd_scene load_steps=11 format=3 uid="uid://dyvsw0hu2jaqh"]

[ext_resource type="Texture2D" uid="uid://cp585qx2ep2wm" path="res://art/placeable_items/Explosion.png" id="1_8ppha"]
[ext_resource type="Script" uid="uid://bxx82rcmjhwke" path="res://scripts/placeable_items/placed_bomb.gd" id="1_8q6ix"]
[ext_resource type="Texture2D" uid="uid://ob8rcx5wk5ix" path="res://art/placeable_items/PlaceableBomb.png" id="2_8q6ix"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jr1rp"]
atlas = ExtResource("1_8ppha")
region = Rect2(0, 0, 25, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydn3m"]
atlas = ExtResource("1_8ppha")
region = Rect2(25, 0, 25, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2ee6"]
atlas = ExtResource("1_8ppha")
region = Rect2(50, 0, 25, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6tu2"]
atlas = ExtResource("2_8q6ix")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nksfv"]
atlas = ExtResource("2_8q6ix")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5csib"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr1rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydn3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2ee6")
}],
"loop": false,
"name": &"explosion",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6tu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nksfv")
}],
"loop": true,
"name": &"ticking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8ppha"]
radius = 18.0

[node name="PlacedBomb" type="Area2D"]
y_sort_enabled = true
scale = Vector2(2.5, 2.5)
collision_mask = 7
script = ExtResource("1_8q6ix")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5csib")
animation = &"explosion"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8ppha")
disabled = true

[node name="EplodeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="EplodeTimer" to="." method="_on_eplode_timer_timeout"]
